--- a/task-03.html
+++ b/task-03.html
@@ -13,6 +13,10 @@
         color: #424242;
         line-height: 1.5;
       }
+      ul {
+        display: flex;
+        gap: 40px;
+      }
     </style>
   </head>
   <body>
